--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: tests
+name: Run go tests with coverage
 
 on:
     push:
@@ -14,7 +14,7 @@ jobs:
 
         steps:
             - name: Checkout code
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
 
             - name: Set up Go
               uses: actions/setup-go@v3
@@ -26,12 +26,23 @@ jobs:
                   set -e
                   go mod tidy
 
-            - name: Run tests
+            - name: Run tests with coverage
               run: |
                   set -e
-                  go test -v -cover ./...
+                  go test -coverprofile=coverage.out ./...
 
             - name: Run benchmarks
               run: |
                   set -e
                   go test -bench=. ./...
+
+            - name: Generate coverage badge
+              run: |
+                  # Generate coverage percentage
+                  coverage=$(go tool cover -func=coverage.out | grep total | awk '{print $3}' | sed 's/%//')
+                  
+                  # Generate badge image
+                  echo "<svg xmlns='http://www.w3.org/2000/svg' width='100' height='20'><rect width='100' height='20' fill='green'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' fill='white'>Coverage: ${coverage}%</text></svg>" > coverage.svg
+
+            - name: Save badge
+              run: mv coverage.svg ./badge.svg
